# pdm-audit

./: .gitignore  .python-version  LICENSE  README.md  pyproject.toml  renovate.json
.devcontainer/: devcontainer.json
src/pdm_audit/: __init__.py  cli.py  config.py  executor.py  plugin.py  proc.py  signal.py  updates.py
tests/: __init__.py
tests/_data/_projects/vulnerable/urllib3_cve_2021_33503/: pyproject.toml
