[project]
name = "pdm-audit"
version = "0.1.0"
description = "A plug-in running a security audit when installing packages"
authors = [
    {name = "Carsten Igel",email = "cig@bite-that-bit.de"},
]
dependencies = [
    "pdm>=2.12.4",
    "pip-audit>=2.7.2",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.entry-points.pdm]
pdm-audit = "pdm_audit:main"

[tool.pdm]
distribution = true
plugins = [
    "-e file:///${PROJECT_ROOT}",
]
